# Rust

esercitazione0/: a.out  data  main.c
esercitazione0/enums/src/: main.rs
esercitazione0/es_if/: Cargo.toml
esercitazione0/es_if/src/: main.rs
esercitazione0/functions/src/: main.rs
esercitazione0/move_semantics/src/: main.rs
esercitazione0/primitive_types/src/: main.rs
esercitazione0/quiz/src/: main.rs
esercitazione0/serialized_reader/: Cargo.toml
esercitazione0/serialized_reader/src/: main.rs
esercitazione0/strings/src/: main.rs
esercitazione0/structs/src/: main.rs
esercitazione0/variables/: Cargo.toml
esercitazione0/variables/src/: main.rs
esercitazione0/vecs/src/: main.rs
esercitazione1/minesweeper/: Cargo.toml
esercitazione1/minesweeper/.docs/: instructions.md
esercitazione1/minesweeper/.meta/: config.json  example.rs  tests.toml
esercitazione1/minesweeper/src/: lib.rs
esercitazione1/minesweeper/tests/: minesweeper.rs
esercitazione1/minesweeper_cl/: Cargo.toml
esercitazione1/minesweeper_cl/src/: main.rs
esercitazione1/robot-simulator/: Cargo.toml
esercitazione1/robot-simulator/.docs/: instructions.md
esercitazione1/robot-simulator/.meta/: config.json  example.rs  (+1 more)
esercitazione1/robot_cl/: Cargo.toml
esercitazione1/slufigy/: Cargo.toml
esercitazione2/esercizio1/: Cargo.toml  data
esercitazione2/esercizio2/: Cargo.toml
esercitazione3/: passing_arguments
esercitazione3/esercizio1/: Cargo.toml
esercitazione3/esercizio2/: Cargo.toml
esercitazione3/esercizio3/: Cargo.toml
esercitazione4/esercizio1/: Cargo.toml
(+14 files in other folders)
