[package]
name = "esercizio1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
serde = {version= "1.0.160", features=["derive"]}
bincode ="1.3.3"
fcntl = "0.1.0"
serde_repr = "0.1.12"

[[bin]]
name= "p1"
path="src/p1/bin/main.rs"

[[bin]]
name= "p2"
path="src/p2/bin/main.rs"

